<resources>
    <string name="app_name">Secure I/F</string>
    <string name="action_about">About</string>
    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_donate">Donate</string>
    <string name="action_help">Help</string>
    <string name="action_ok">OK</string>
    <string name="action_open">Open</string>
    <string name="action_settings">Settings</string>
    <string name="boot">Disable on boot</string>
    <string name="boot_enabled">Enabled on boot</string>
    <string name="boot_disabled">Disabled on boot</string>
    <string name="usb_charging">USB Charging</string>
    <string name="usb_charging_is_enabled">USB Charging is Enabled</string>
    <string name="usb_charging_is_disabled">USB Charging is Disabled</string>
    <string name="usb_connection">USB Connection</string>
    <string name="usb_port_is_disabled">USB Port is Disabled</string>
    <string name="usb_port_is_enabled">USB Port is Enabled</string>
    <string name="adb_debug">ADB Debug</string>
    <string name="need_magisk">Disable on boot dependence on Magisk</string>
    <string name="text_about">
        <![CDATA[
        This application for controlling the function of the Android USB interface to protect your device.<br /><br />
        <b>Version:</b> 1.0.2<br />
        <b>GitHub:</b> <a href="https://github.com/noname8964/secure-if">Secure I/F</a><br />
        <b>License:</b> <a href="https://www.iternull.com/licenses/">IterNull</a><br />
        ]]>
    </string>
    <string name="text_donate">
        <![CDATA[
        <b>Paypal:</b><br />
        <b>Alipay:</b><br />
        Thank you for your donation.<br />
        ]]>
    </string>
    <string name="text_help">
        <![CDATA[
        <b>1. </b>The is Help.<br /><br />
        ]]>
    </string>
</resources>
