<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iternull.secureif.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <Switch
            android:id="@+id/switch_boot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="40dp"
            android:paddingTop="30dp"
            android:text="@string/boot"
            android:textOn="@string/boot_enabled"
            android:textOff="@string/boot_disabled"
            tools:ignore="RtlHardcoded" />

        <Switch
            android:id="@+id/switch_usbcharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="40dp"
            android:paddingTop="30dp"
            android:text="@string/usb_charging"
            android:textOn="@string/usb_charging_is_enabled"
            android:textOff="@string/usb_charging_is_disabled"
            tools:ignore="RtlHardcoded" />

        <Switch
            android:id="@+id/switch_usbdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="40dp"
            android:paddingTop="20dp"
            android:text="@string/usb_connection"
            android:textOn="@string/usb_port_is_enabled"
            android:textOff="@string/usb_port_is_disabled"
            tools:ignore="RtlHardcoded" />

        <CheckBox
            android:id="@+id/checkbox_debug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_gravity="center|end"
            android:gravity="center|end"
            android:checked="true"
            android:text="@string/adb_debug" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
